--- a/paginas/formulario.html
+++ b/paginas/formulario.html
@@ -134,11 +134,15 @@
         <div class="col-12 col-md-7 mb-3 mb-md-0">
           <i class="bi bi-geo-alt-fill text-danger"></i> Ubicación
           <div class="mt-2">
-            <iframe
-              src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d424.273247263062!2d-56.924519079983654!3d-25.162970051449516!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1ses!2sPY!4v1751466478653!5m2!1ses!2sPY"
-              width="100%" height="200" style="border: 0" allowfullscreen="" loading="lazy"
-              referrerpolicy="no-referrer-when-downgrade">
-            </iframe>
+          <iframe 
+            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d356.7698528620619!2d-56.924608!3d-25.16297!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x945dd7006e1bb675%3A0xc76b665ad95f7306!2sFerTech%2B!5e1!3m2!1ses!2sPY!4v1751573255202!5m2!1ses!2sPY" 
+            width="100%" 
+            height="200" 
+            style="border:0;" 
+            allowfullscreen="" 
+            loading="lazy" 
+            referrerpolicy="no-referrer-when-downgrade">
+          </iframe>
           </div>
         </div>
 
