--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -75,7 +75,7 @@
     <!-- Logo centrado arriba -->
     <div class="row mb-4">
       <div class="col-12 text-center">
-        <a href="index.html">
+        <a href="../index.html">
           <img src="../img/logo_fertech_custom.jpg" alt="Logo FerTech+" width="110" class="img-fluid">
         </a>
       </div>
