--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <header class="hero-section d-flex align-items-center justify-content-center">
     <div class="container text-center">
       <h1 class="display-4 fw-bold">Bienvenid@s a <span class="text-primary">FERTECH+</span></h1>
-      <p class="lead">Tu solución en reparación y venta de celulares</p>
+      <p class="lead">Tu solución en reparación y en ventas de articulos electronicos.</p>
     </div>
   </header>
 
